fix Atkinson Hyperlegible font paths and filenames, add woff2 font files
Fixes #110

--- a/web/themes/custom/customsolent/css/fonts.css
+++ b/web/themes/custom/customsolent/css/fonts.css
@@ -19,34 +19,68 @@
 }
 
 
+/* */
+
+
+
+
+
+/* Regular */
+@font-face {
+  font-family: 'Atkinson Hyperlegible Next';
+  src: url('../fonts/googlefonts/atkinson-hyperlegible-next/fonts/webfonts/AtkinsonHyperlegibleNext-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Bold */
+@font-face {
+  font-family: 'Atkinson Hyperlegible Next';
+  src: url('../fonts/googlefonts/atkinson-hyperlegible-next/fonts/webfonts/AtkinsonHyperlegibleNext-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Italic */
+@font-face {
+  font-family: 'Atkinson Hyperlegible Next';
+  src: url('../fonts/googlefonts/atkinson-hyperlegible-next/fonts/webfonts/AtkinsonHyperlegibleNext-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+
+
+
 .slnt-text,
 body,
 .slnt-text > * a {
-  font-family: 'Noto Sans';
+  font-family: 'Atkinson Hyperlegible Next';
   font-size: 1em;
 }
 
 h1 {
-  font-family: "Noto Sans";
+  font-family: "Atkinson Hyperlegible Next";
   font-size: 3.2em;
   font-weight: 700;
   line-height: 1.1em;
 }
 
 h2 {
-  font-family: "Noto Sans";
+  font-family: "Atkinson Hyperlegible Next";
   font-size: 2.5em;
   font-weight: 500;
 }
 
 h3 {
-  font-family: "Noto Sans";
+  font-family: "Atkinson Hyperlegible Next";
   font-size: 2em;
   font-weight: 400;
 }
 
 h4 {
-  font-family: "Noto Sans";
+  font-family: "Atkinson Hyperlegible Next";
   font-size: 1.2em;
 }
 
