--- a/web/themes/custom/customsolent/css/menu-common.css
+++ b/web/themes/custom/customsolent/css/menu-common.css
@@ -103,7 +103,7 @@ a.main_nav_link:focus {
 
 button.main_nav_link,
 a.main_nav_link {
-  font-family: "Noto Sans";
+  font-family: "Atkinson Hyperlegible Next";
   font-size: 1em;
   display: flex;
   align-items: center;
